Fixing context menu z-index.
BUG=chromium-os:25837
TEST=Manual test.

Review URL: https://chromiumcodereview.appspot.com/9355037

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@122747 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f575d6188afd08cb198510c08a864995b44ac8d5

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -959,3 +959,7 @@ li.table-row {
   border: none;
   z-index: 100;
 }
+
+menu.file-context-menu {
+  z-index: 4;
+}
